@@ -1,5 +1,11 @@
 2013-01-16  Paul Eggert  <eggert@cs.ucla.edu>
 
+	Merge from gnulib, incorporating:
+	2013-01-16 largefile: port better to Mac OS X 10.5
+	2013-01-15 stdint: fix build with Android's Bionic fox x86
+
+2013-01-16  Paul Eggert  <eggert@cs.ucla.edu>
+
 	* configure.ac: Document that --enable-gcc-warnings emits errors.
 	(Bug#13448)
 
